Anpassungen am Shipit-Day